fix badge icon popping out of place

--- a/app/assets/stylesheets/components/progress_circle.scss
+++ b/app/assets/stylesheets/components/progress_circle.scss
@@ -38,8 +38,16 @@ $back-color: #dddddd;
     background-color: #fff;
     border-radius: 50%;
     position: absolute;
-    top: 2px;
-    left: 2px;
+
+    @media (min-width: 992px){
+      top: 2px;
+      left: 2px;
+    }
+    
+    @media (max-width: 991px){
+      top: -8px;
+      left: -8px;
+    }
   }
 
   &__content {
